Fixed line break at bottom

--- a/files/theme/nhd.css
+++ b/files/theme/nhd.css
@@ -21,7 +21,7 @@
 #siteFooter {
 	padding: 0;
 	margin: 0;
-	margin-right: 50px;
+	margin-right: 150px;
 }
 		
 .contentHeader {
